Added new fuction to get video IDs(not working Rn)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div class="title">
+      <h1>SoundShuffle</h1>
+    </div>
     <div class="player">
       <iframe id="player" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
     </div>
